<resources>
    <string name="app_name">CardGuesser</string>
    <string name="Title">No.FLame Concentration Game</string>
    <string name="play">Play Game</string>
    <string name="dropDown_prompt">cards</string>
    <string name="TryAgainButton">Try Again</string>
    <string name="newGame">New Game</string>
    <string name="endGame">End Game</string>
    <string name="highScore">High Scores</string>
    <string name="menuBGMon">Sound On/Off</string>
    <string name="menuBGMoff">Sound Off</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="score">Score: 0</string>
    <string name="back">Back</string>
    <string-array name="num_cards">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>


</resources>
